# plug_and_play_fs

./: .gitignore  Cargo.toml  README.md  deploy.sh
src/: app_config.rs  file_path.rs  files.rs  main.rs  tests.rs
src/handlers/: auth.rs  files.rs  folders.rs  mod.rs  root.rs  timelapse.rs
src/models/: folder.rs  mod.rs  user.rs
src/util/: error.rs  forward.rs  mod.rs  time_format.rs  timelapse.rs  write_zip.rs  zip.rs
static/styles/: style.css
static/templates/: about.hbs  file-detail.hbs  files.hbs  folder-detail.hbs  layout.hbs  login.hbs  nav.hbs  timelapse.hbs  user.hbs
templates/: files.html.hbs  layout.html.hbs
templates/error/: 404.html.hbs  io_error.html.hbs
