[package]
name = "plug-and-play-fs"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "^4"
actix-http = "^3.2.2"
actix-files = "0.6"
actix-multipart = "0.4.0"
actix-web-flash-messages = { version = "0.4.1", features = ["cookies"] }
handlebars = { version = "4.3.3", features = ["dir_source"] }
env_logger = "0.9"
log = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.24"
time = "0.3.14"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }